--- a/style.css
+++ b/style.css
@@ -4,8 +4,9 @@
 body{
     margin:0 ;
     padding: 0;
-    background-image: url(pexels-ella-olsson-572949-1640773.jpg);
+    background-image: url(png/pexels-ella-olsson-572949-1640773.jpg);
     background-size:120%;
+    position: sticky;
 }
 
 
@@ -61,9 +62,9 @@ header {
     font-family: 'Times New Roman', Times, serif;
     font-size: large;
     /*font-weight: bold;*/
-    opacity:0.7;
     background-color: #333;
     color:aliceblue;
+    opacity: 0.9;
     border: none;
     padding: 15px 20px;
     margin: 10px 0px;
@@ -71,13 +72,17 @@ header {
     cursor: pointer;
     border-radius: 40px;
     display: block; /*display verticle*/
+    transition: background-color 0.3s;
+}
+
+.options-container button:hover{
+    background-color: black;
 }
 
 
 
 .options-container {
-    opacity:0.8;
-
+    opacity: 85%;
     /*backdrop-filter: blur(10px);*/
     background-color: aliceblue;
     width: 100px;
@@ -87,33 +92,107 @@ header {
     position:absolute;
 }
 
-.calendar1 {
+.calendar {
     background-color: #333;
     opacity:0.9;
     color: aliceblue;
     font-size: large;
     font-family: 'Times New Roman', Times, serif;
+    padding: 10% 0%;
+    margin: 10% 30%;
+    width: 65%;
+    height: 50%;
+    border-radius: 10px;
+    position:relative;
+    /*
+    margin outline 
+    padding inline
+    */
+
+}
+
+
+#indexedit, #indexdelete{
+    position: absolute; /* Positioning the buttons */
+    bottom: 10px; /* Distance from the bottom */
+    right: 20px; /* Distance from the right */
+    margin-right: 10px;
+    padding: 1% 2%;
+    font-size: 17px;
+    cursor: pointer;
+    border: none;
+    border-radius: 5px;
+    background-color:aliceblue; /* Green color for edit */
+    color: #333;
+    opacity: 0.9;
+    transition: background-color 0.3s, opacity 0.3s;
+}
+
+#indexdelete {
+    margin-right: 65px;
+}
+
+#indexedit {
+    margin-right: 0px;
+}
+
+
+.foodlist {
+    background-color: #333;
+    padding:30px;
+    opacity:90%;
+    color: aliceblue;
+    font-size: large;
+    font-family: 'Times New Roman', Times, serif;
     margin-top: 5%;
     margin-left: 25%;
-    width: 65%;
+    width: 50%;
     height: 50%;
     border-radius: 10px;
     position:relative;
 
 }
 
-.calendar1 button {
-    margin: 10px;
-    margin-right: 20px;
-    float:right;
-    border: none;
-    background-color:aliceblue;
-    opacity: 0.9;
+
+#edit, #delete{
+    position: absolute; /* Positioning the buttons */
+    bottom: 10px; /* Distance from the bottom */
+    right: 20px; /* Distance from the right */
+    margin-right: 10px;
+    padding: 1% 2%;
+    font-size: 17px;
     cursor: pointer;
+    border: none;
     border-radius: 5px;
+    background-color:aliceblue; /* Green color for edit */
+    color: #333;
+    opacity: 0.9;
+    transition: background-color 0.3s, opacity 0.3s;
 }
 
-.calendar1 li {
-    padding: 7px;
+#delete {
+    margin-right: 65px;
 }
 
+#edit {
+    margin-right: 0px;
+}
+
+
+#addpage {
+    margin:5% 50%;
+    padding: 10px 15px;
+    font-size: 16px;
+    cursor: pointer;
+    border: none;
+    border-radius: 5px;
+    background-color:#333;
+    color:aliceblue;
+    opacity: 0.7;
+    transition: background-color 0.3s;
+}
+
+#addpage:hover {
+    background-color: black;
+    opacity: 80%;
+}
