--- a/style.css
+++ b/style.css
@@ -1,12 +1,10 @@
 
-
-
 body{
-    margin:0 ;
-    padding: 0;
+    margin:0 0;
+    padding: 0 0;
     background-image: url(pexels-ella-olsson-572949-1640773.jpg);
     background-size:120%;
-    position: sticky;
+    position: fixed;
 }
 
 
@@ -15,15 +13,17 @@ header {
 
     background-color: #333;
     text-align: center;
-    width: 100%;
+    height: 20px;
+    width: 100vw;
     padding: 18px 1px;
     display:flex;
     justify-content: space-between;
     font-size: 130%;
     opacity:0.8;
-    position:static;
+    position: relative;
 
 }
+
 
 .left, .right, #meanuHeader {
     list-style-type: none;
@@ -40,6 +40,17 @@ header {
     margin-left: 20px;
 }
 
+.options-container {
+    opacity: 85%;
+    /*backdrop-filter: blur(10px);*/
+    background-color: aliceblue;
+    width: 100px;
+    height: 100vh;
+    margin-top: 0px;
+    padding: 20px;
+    position:fixed;
+}
+
 .options-container #menuHeader {
     color: #333;
     font-weight: bold;
@@ -53,8 +64,6 @@ header {
     text-decoration: none;
     padding: 10px 15px;
 }
-
-
 
 
 
@@ -80,119 +89,3 @@ header {
 }
 
 
-
-.options-container {
-    opacity: 85%;
-    /*backdrop-filter: blur(10px);*/
-    background-color: aliceblue;
-    width: 100px;
-    margin-top: 0%;
-    height: 100%;
-    padding: 20px;
-    position:absolute;
-}
-
-.calendar {
-    background-color: #333;
-    opacity:0.9;
-    color: aliceblue;
-    font-size: large;
-    font-family: 'Times New Roman', Times, serif;
-    padding: 10% 0%;
-    margin: 10% 30%;
-    width: 65%;
-    height: 50%;
-    border-radius: 10px;
-    position:relative;
-    /*
-    margin outline 
-    padding inline
-    */
-
-}
-
-
-#indexedit, #indexdelete{
-    position: absolute; /* Positioning the buttons */
-    bottom: 10px; /* Distance from the bottom */
-    right: 20px; /* Distance from the right */
-    margin-right: 10px;
-    padding: 1% 2%;
-    font-size: 17px;
-    cursor: pointer;
-    border: none;
-    border-radius: 5px;
-    background-color:aliceblue; /* Green color for edit */
-    color: #333;
-    opacity: 0.9;
-    transition: background-color 0.3s, opacity 0.3s;
-}
-
-#indexdelete {
-    margin-right: 65px;
-}
-
-#indexedit {
-    margin-right: 0px;
-}
-
-
-.foodlist {
-    background-color: #333;
-    padding:30px;
-    opacity:90%;
-    color: aliceblue;
-    font-size: large;
-    font-family: 'Times New Roman', Times, serif;
-    margin-top: 5%;
-    margin-left: 25%;
-    width: 50%;
-    height: 50%;
-    border-radius: 10px;
-    position:relative;
-
-}
-
-
-#edit, #delete{
-    position: absolute; /* Positioning the buttons */
-    bottom: 10px; /* Distance from the bottom */
-    right: 20px; /* Distance from the right */
-    margin-right: 10px;
-    padding: 1% 2%;
-    font-size: 17px;
-    cursor: pointer;
-    border: none;
-    border-radius: 5px;
-    background-color:aliceblue; /* Green color for edit */
-    color: #333;
-    opacity: 0.9;
-    transition: background-color 0.3s, opacity 0.3s;
-}
-
-#delete {
-    margin-right: 65px;
-}
-
-#edit {
-    margin-right: 0px;
-}
-
-
-#addpage {
-    margin:5% 50%;
-    padding: 10px 15px;
-    font-size: 16px;
-    cursor: pointer;
-    border: none;
-    border-radius: 5px;
-    background-color:#333;
-    color:aliceblue;
-    opacity: 0.7;
-    transition: background-color 0.3s;
-}
-
-#addpage:hover {
-    background-color: black;
-    opacity: 80%;
-}
