--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body{
     margin:0 0;
     padding: 0 0;
-    background-image: url(png/pexels-ella-olsson-572949-1640773.jpg);
+    background-image: url(pexels-ella-olsson-572949-1640773.jpg);
     background-size:120%;
     position: fixed;
 }
@@ -10,7 +10,7 @@ body{
 @media (orientation:portrait) {body{
     margin:0 0;
     padding: 0 0;
-    background-image: url(png/vertical.jpg);
+    background-image: url(vertical.jpg);
     background-size:120%;
     position: fixed;
 }}
